Tests/ValidTests/Test2_A_lot_of_directives_in_file/test.as
; this is comment
LIST: .data 6, -9
.data -100
GALCHECK: .data -100, 5, 7
OPENU: .data 100, 100, 100
mov r1, r5
.entry K
K: .data 6

