Tests/InvalidTests/Test1_directive_and_opcodes_wrong_use/test.as
MAIN: add r3, LIST
lea W, r9
inc r6, r6
.data 5 7
.string -15  9
mov r6

